# diffr-c

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  INSTALL.md  README.md  glib-links.txt
cmake/modules/: CodeCoverage.cmake  FindGlib.cmake
include/diffr/diff/: Diffr.h
include/diffr/patch/: Patchr.h
include/diffr/suffixtree/: SuffixTrees.h
include/diffr/util/: ArgumentsProcessor.h
include/diffr/util/instruction/: Instruction.h
scripts/: format.astylerc  formatAll.sh
src/: Makefile  instruction.c  instruction.h  patch.c
src/diff/: Diffr.c  main.c
src/patch/: Patchr.c  main.c
src/suffixtree/: SuffixTrees.c
src/util/: ArgumentsProcessor.c
src/util/instruction/: Instruction.c
test/src/diff/: DiffrTest.cpp
test/src/integration/: IntegrationTests.cpp
test/src/patch/: PatchrTest.cpp
test/src/suffixtree/: SuffixTreesTest.cpp
test/src/util/: ArgumentsProcessorTest.cpp
test/src/util/instruction/: InstructionTest.cpp
